Fix layout issue

--- a/src/qb-component/QbFooter/QbFooter.scss
+++ b/src/qb-component/QbFooter/QbFooter.scss
@@ -4,14 +4,14 @@ footer {
     font-size: 16px;
     margin: auto;
     width: 100%;
-    color: $white;
+    color: $white !important;
     background-color: $darkSky;
     @media (min-width: $mediaDesktop) {
         height: 60px;
     }
 
     a:hover {
-        color: $white;
+        color: $white !important;
     }
 
     > ul {
@@ -78,7 +78,7 @@ footer {
         }
 
         li > a {
-            color: $white;
+            color: $white !important;
         }
     }
 }
